个人信息,安全设置

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="login-links">
                     <label for="remember-me"><input id="remember-me" type="checkbox">记住密码</label>
-                    <a href="{% url 'update' %}" class="am-fr">忘记密码</a>
+                    <a href="{% url 'password_update' %}" class="am-fr">忘记密码</a>
                     <a href="{% url 'register' %}" class="zcnext am-fr am-btn-default">注册</a>
                     <br/>
                 </div>
