--- a/templates/personal/index.html
+++ b/templates/personal/index.html
@@ -35,7 +35,7 @@
 											<img src="../images/getAvatar.do.jpg">
 										</a>
 										<div class="m-info">
-											<em class="s-name">小叮当</em>
+											<em class="s-name"></em>
 											<div class="vip1"><a href="#"><span></span><em>会员专享</em></a></div>
 											<div class="safeText"><a href="safety.html">账户安全:<em style="margin-left:20px ;">60</em>分</a>
 												<div class="progressBar"><span style="left: -95px;" class="progress"></span></div>
@@ -397,25 +397,7 @@
 
 				</div>
 				<!--底部-->
-				<div class="footer">
-					<div class="footer-hd">
-						<p>
-								<b>|</b>
-								<a href="# ">商城首页</a>
-								<b>|</b>
-								<a href="# ">支付宝</a>
-								<b>|</b>
-								<a href="# ">物流</a>
-							</p>
-						</div>
-						<div class="footer-bd ">
-							<p>
-								<a href="# ">合作伙伴</a>
-								<a href="# ">联系我们</a>
-								<a href="# ">网站地图</a>
-							</p>
-					</div>
-				</div>
+                {% include 'include/footer.html' %}
 
 			</div>
 
