--- a/templates/shopcart/shopcart.html
+++ b/templates/shopcart/shopcart.html
@@ -2,13 +2,21 @@
 {% block title %}购物车{% endblock %}
 {% load staticfiles %}
 {% block css %}
+
+
+    <link href="{% static 'AmazeUI-2.4.2/assets/css/amazeui.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'basic/css/demo.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'css/cartstyle.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'css/optstyle.css' %}" rel="stylesheet" type="text/css" />
+{##}
+{#    <script type="text/javascript" src="{% static 'js/jquery.js' %}"></script>#}
     <link rel="stylesheet" href="{% static 'css/reset.css' %}">
     <link rel="stylesheet" href="{% static 'css/carts.css' %}">
     <script src="{% static 'js/jquery-1.11.0.min.js' %}"></script>
     <script src="{% static 'js/carts.js' %}"></script>
 {% endblock %}
 {% block content %}
-{#{% include 'include/head.html' %}#}
+{% include 'include/head.html' %}
     <hr>
     <section class="cartMain">
         <div class="cartMain_hd">
@@ -42,9 +50,10 @@
             <div class="order_content">
                 {% for shop_cart in shop_carts %}
                 <ul class="order_lists">
+
                     <li class="list_chk">
-                        <input type="checkbox" id="checkbox_{{ shop_cart.shop_id }}" class="son_check">
-                        <label for="checkbox_{{ shop_cart.shop_id }}"></label>
+                        <input type="checkbox" id="checkbox_{{ shop_cart.shop_id }}" class="son_check" carid="{{ shop_cart.cart_id }}">
+                        <label for="checkbox_{{ shop_cart.shop_id }}" ></label>
                     </li>
                     <li class="list_con">
                         <div class="list_img"><a href="javascript:;"><img src="{{ shop_cart.img }}" alt=""></a></div>
@@ -59,8 +68,8 @@
                     </li>
                     <li class="list_amount">
                         <div class="amount_box">
-                            <a href="javascript:;" class="reduce reSty">-</a>
-                            <input type="text" value="{{ shop_cart.number }}" class="sum">
+                            <a href="javascript:;" class="reduce reSty" >-</a>
+                            <input type="text" value="{{ shop_cart.number }}" class="sum" cart_id="{{ shop_cart.cart_id }}">
                             <a href="javascript:;" class="plus">+</a>
                         </div>
                     </li>
@@ -70,68 +79,13 @@
                     <li class="list_op">
                         <p class="del"><a href="javascript:;" class="delBtn">移除商品</a></p>
                     </li>
+                    <section class="my_model">
+                        <p class="title">删除宝贝<span class="closeModel">X</span></p>
+                        <p>您确认要删除该宝贝吗？</p>
+                        <div class="opBtn"><a href="javascript:;" class="dialog-sure" cartid="{{ shop_cart.cart_id }}" shopid="{{ shop_cart.shop_id }}">确定</a><a href="javascript:;" class="dialog-close">关闭</a></div>
+                    </section>
                 </ul>
                 {% endfor %}
-                <ul class="order_lists">
-                    <li class="list_chk">
-                        <input type="checkbox" id="checkbox_3" class="son_check">
-                        <label for="checkbox_3"></label>
-                    </li>
-                    <li class="list_con">
-                        <div class="list_img"><a href="javascript:;"><img src="{% static 'images/2.png' %}" alt=""></a></div>
-                        <div class="list_text"><a href="javascript:;">夏季男士迷彩无袖T恤圆领潮流韩版修身男装背心青年时尚打底衫男</a></div>
-                    </li>
-                    <li class="list_info">
-                        <p>规格：默认</p>
-                        <p>尺寸：16*16*3(cm)</p>
-                    </li>
-                    <li class="list_price">
-                        <p class="price">￥7801</p>
-                    </li>
-                    <li class="list_amount">
-                        <div class="amount_box">
-                            <a href="javascript:;" class="reduce reSty">-</a>
-                            <input type="text" value="1" class="sum">
-                            <a href="javascript:;" class="plus">+</a>
-                        </div>
-                    </li>
-                    <li class="list_sum">
-                        <p class="sum_price">￥780</p>
-                    </li>
-                    <li class="list_op">
-                        <p class="del"><a href="javascript:;" class="delBtn">移除商品</a></p>
-                    </li>
-                </ul>
-                <ul class="order_lists">
-                    <li class="list_chk">
-                        <input type="checkbox" id="checkbox_6" class="son_check">
-                        <label for="checkbox_6"></label>
-                    </li>
-                    <li class="list_con">
-                        <div class="list_img"><a href="javascript:;"><img src="{% static 'images/3.png' %}" alt=""></a></div>
-                        <div class="list_text"><a href="javascript:;">夏季男士迷彩无袖T恤圆领潮流韩版修身男装背心青年时尚打底衫男</a></div>
-                    </li>
-                    <li class="list_info">
-                        <p>规格：默认</p>
-                        <p>尺寸：16*16*3(cm)</p>
-                    </li>
-                    <li class="list_price">
-                        <p class="price">￥180</p>
-                    </li>
-                    <li class="list_amount">
-                        <div class="amount_box">
-                            <a href="javascript:;" class="reduce reSty">-</a>
-                            <input type="text" value="1" class="sum">
-                            <a href="javascript:;" class="plus">+</a>
-                        </div>
-                    </li>
-                    <li class="list_sum">
-                        <p class="sum_price">￥180</p>
-                    </li>
-                    <li class="list_op">
-                        <p class="del"><a href="javascript:;" class="delBtn">移除商品</a></p>
-                    </li>
-                </ul>
             </div>
         </div>
 
@@ -139,16 +93,12 @@
         <div class="bar-wrapper">
             <div class="bar-right">
                 <div class="piece">已选商品<strong class="piece_num">0</strong>件</div>
-                <div class="totalMoney">共计: <strong class="total_text">0.00</strong></div>
-                <div class="calBtn"><a href="{% url 'order' %}">结算</a></div>
+                <div class="totalMoney">共计: <strong class="total_text" >0.00</strong></div>
+                <div class="calBtn" ><a href="javascript:;">结算</a></div>
             </div>
         </div>
     </section>
     <section class="model_bg"></section>
-    <section class="my_model">
-        <p class="title">删除宝贝<span class="closeModel">X</span></p>
-        <p>您确认要删除该宝贝吗？</p>
-        <div class="opBtn"><a href="javascript:;" class="dialog-sure">确定</a><a href="javascript:;" class="dialog-close">关闭</a></div>
-    </section>
+
 
 {% endblock %}
