--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -64,10 +64,10 @@
 										<dt class="am-badge am-round">品牌</dt>	
 									
 										 <div class="dd-conent">										
-											<dd class="select-all selected"><a href="#">全部</a></dd>
+											<dd class="select-all selected"><a href="{% url 'search' %}?id={{ bid }}&brand_name">全部</a></dd>
 
                                              {% for brand in brand_list %}
-                                            <dd><a href="{% url 'search' %}?id={{ brand.third_cate_id.third_cate_id}}&keyword={{ brand.brand_name }}">{{ brand.brand_name }}</a></dd>
+                                            <dd><a href="{% url 'search' %}?id={{ brand.third_cate_id.third_cate_id}}&brand_name={{ brand.brand_name }}">{{ brand.brand_name }}</a></dd>
                                              {% endfor %}
 										 </div>
 						
@@ -78,10 +78,10 @@
                         </div>
 							<div class="search-content">
 								<div class="sort">
-									<li class="first"><a title="综合">综合排序</a></li>
-									<li><a title="销量">销量排序</a></li>
-									<li><a title="价格">价格优先</a></li>
-									<li class="big"><a title="评价" href="#">评价为主</a></li>
+									<li class="first"><a title="综合" href="{% url 'search' %}?id={{ bid }}&brand_name={{ bname }}">综合排序</a>
+									<li><a title="销量" href="{% url 'search' %}?id={{ bid }}&px=1&brand_name={{ bname }}">销量排序</a></li>
+									<li><a title="价格" href="{% url 'search' %}?id={{ bid }}&pc=1&brand_name={{ bname }}">价格优先</a></li>
+									<li class="big"><a title="评价" href="{% url 'search' %}?id={{ bid }}&pj=1&brand_name={{ bname }}">评价为主</a></li>
 								</div>
 								<div class="clear"></div>
 
@@ -103,6 +103,7 @@
                                             </a>
 									</li>
                                     {% endfor %}
+
 
 
 								</ul>
