--- a/templates/order/order.html
+++ b/templates/order/order.html
@@ -369,7 +369,7 @@
 
 									<div id="holyshit269" class="submitOrder">
 										<div class="go-btn-wrap">
-											<a id="J_Go" href="{% url 'pay' %}" class="btn-go" tabindex="0" title="点击此按钮，提交订单">提交订单</a>
+											<a id="J_Go" href="{% url 'pay' %}/?order_code={{ order.order_code }}" class="btn-go" tabindex="0" title="点击此按钮，提交订单">提交订单</a>
 										</div>
 									</div>
 									<div class="clear"></div>
