--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -47,7 +47,7 @@
 							</div>
 							<ul class="select">
 								<p class="title font-normal">
-									<span class="fl">松子</span>
+									<span class="fl">手机</span>
 									<span class="total fl">搜索到<strong class="num">997</strong>件相关商品</span>
 								</p>
 								<div class="clear"></div>
@@ -64,24 +64,34 @@
 										<dt class="am-badge am-round">品牌</dt>	
 									
 										 <div class="dd-conent">										
-											<dd class="select-all selected"><a href="{% url 'search' %}?id={{ bid }}&brand_name">全部</a></dd>
+											<dd class="select-all selected"><a href="{% url 'search' %}?id={{ bid }}&brand_name&pt&pt2&pt3&pt4&px&pc&pj">全部</a></dd>
 
                                              {% for brand in brand_list %}
-                                            <dd><a href="{% url 'search' %}?id={{ brand.third_cate_id.third_cate_id}}&brand_name={{ brand.brand_name }}">{{ brand.brand_name }}</a></dd>
+                                            <dd><a href="{% url 'search' %}?id={{ brand.third_cate_id.third_cate_id}}&brand_name={{ brand.brand_name }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}&px={{ px1 }}&pc={{ px2 }}&pj={{ px3 }}">{{ brand.brand_name }}</a></dd>
                                              {% endfor %}
 										 </div>
-						
 									</dl>
+                                    <dl id="select1">
+                                        <dt class="am-badge am-round">价格</dt>
+                                        <div>
+                                            <dd><a href="{% url 'search' %}?id={{ bid }}&pt=1&brand_name={{ bname }}&pt2&pt3&pt4&px={{ px1 }}&pc={{ px2 }}&pj={{ px3 }}">小于1000</a></dd>
+                                            <dd><a href="{% url 'search' %}?id={{ bid }}&pt2=1&brand_name={{ bname }}&pt&pt3&pt4&px={{ px1 }}&pc={{ px2 }}&pj={{ px3 }}">1000~2000</a></dd>
+                                            <dd><a href="{% url 'search' %}?id={{ bid }}&pt3=1&brand_name={{ bname }}&pt&pt2&pt4&px={{ px1 }}&pc={{ px2 }}&pj={{ px3 }}">2000~3000</a></dd>
+                                            <dd><a href="{% url 'search' %}?id={{ bid }}&pt4=1&brand_name={{ bname }}&pt&pt2&pt3&px={{ px1 }}&pc={{ px2 }}&pj={{ px3 }}">3000以上</a></dd>
+                                        </div>
+                                    </dl>
+
 								</li>
 							</ul>
+
 							<div class="clear"></div>
                         </div>
 							<div class="search-content">
 								<div class="sort">
-									<li class="first"><a title="综合" href="{% url 'search' %}?id={{ bid }}&brand_name={{ bname }}">综合排序</a>
-									<li><a title="销量" href="{% url 'search' %}?id={{ bid }}&px=1&brand_name={{ bname }}">销量排序</a></li>
-									<li><a title="价格" href="{% url 'search' %}?id={{ bid }}&pc=1&brand_name={{ bname }}">价格优先</a></li>
-									<li class="big"><a title="评价" href="{% url 'search' %}?id={{ bid }}&pj=1&brand_name={{ bname }}">评价为主</a></li>
+									<li class="first"><a title="综合" href="{% url 'search' %}?id={{ bid }}&brand_name={{ bname }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}&px&pc&pj">综合排序</a>
+									<li><a title="销量" href="{% url 'search' %}?id={{ bid }}&px=1&brand_name={{ bname }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}&pc&pj">销量排序</a></li>
+									<li><a title="价格" href="{% url 'search' %}?id={{ bid }}&pc=1&brand_name={{ bname }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}&px&pj">价格优先</a></li>
+									<li class="big"><a title="评价" href="{% url 'search' %}?id={{ bid }}&pj=1&brand_name={{ bname }}&pt={{ bpt }}&pt2={{ bpt2 }}&pt3={{ bpt3 }}&pt4={{ bpt4 }}&px&pc">评价为主</a></li>
 								</div>
 								<div class="clear"></div>
 
