--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -155,7 +155,7 @@
 
 							</div>
 							<div class="clear"></div>
-							<!--分页功能 -->
+							<!--分页功能 已完成 -->
 							<ul class="am-pagination am-pagination-right">
                     {% if contacts.has_previous  %}
                         <li ><a  href="?&page={{ contacts.previous_page_number }}&keyword={{ keyword }}">&laquo;上一页</a></li>
@@ -195,7 +195,6 @@
 				</div>
 
 			</div>
-
 		<!--引导 -->
 		<div class="navCir">
 			<li><a href="home2.html"><i class="am-icon-home "></i>首页</a></li>
